@@ -1,8 +1,10 @@
 package org.molgenis.armadillo;
 
 import com.github.dockerjava.api.DockerClient;
-import java.util.Arrays;
+import java.util.List;
 import org.molgenis.armadillo.metadata.ArmadilloMetadataService;
+import org.molgenis.armadillo.metadata.DummyMetadataLoader;
+import org.molgenis.armadillo.metadata.MetadataLoader;
 import org.molgenis.armadillo.profile.ProfileService;
 import org.molgenis.armadillo.storage.ArmadilloStorageService;
 import org.springframework.context.annotation.Bean;
@@ -31,9 +33,16 @@ public class TestSecurityConfig extends WebSecurityConfigurerAdapter {
   }
 
   @Bean
+  MetadataLoader metadataLoader() {
+    return new DummyMetadataLoader();
+  }
+
+  @Bean
   ArmadilloMetadataService accessStorageService(
-      ArmadilloStorageService storageService, ProfileService profileService) {
-    return new ArmadilloMetadataService(storageService, profileService);
+      ArmadilloStorageService storageService,
+      ProfileService profileService,
+      MetadataLoader metadataLoader) {
+    return new ArmadilloMetadataService(storageService, profileService, metadataLoader, null);
   }
 
   @Bean
@@ -41,11 +50,11 @@ public class TestSecurityConfig extends WebSecurityConfigurerAdapter {
   public UserDetailsService userDetailsService() {
     GrantedAuthority authority = new SimpleGrantedAuthority("ROLE_SU");
     User userDetails =
-        new User("bofke", "bofke", Arrays.asList(authority)) {
+        new User("bofke", "bofke", List.of(authority)) {
           public String getEmail() {
             return "bofke@email.com";
           }
         };
-    return new InMemoryUserDetailsManager(Arrays.asList(userDetails));
+    return new InMemoryUserDetailsManager(List.of(userDetails));
   }
 }
